--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,8 +11,9 @@
 
     <title>HR-management-system</title>
 </head>
+
 <body>
-     <header class="Indexheader">
+    <header class="Indexheader">
         <a href="#">HR.M.S</a>
         <nav class="headerNav">
             <ul>
@@ -23,19 +25,61 @@
     </header>
 
     <main>
-        <section class="employeeInformation">
-            <h2 class="listHeader">List of the employees</h2>
-            <table>
-                <tr class="firstRow">
-                    <td>Employee ID</td>
-                    <td>Full Name</td>
-                    <td>Department</td>
-                    <td>Level</td>
-                    <td>Salary</td>
-                    <td>Image URL</td>
-                </tr>
-                
-            </table>
+
+        <section class="add-Employeews">
+            <fieldset>
+                <legend>Add employee : </legend>
+                <form id="employee-Form" class="employee-Form">
+                    <div class="form-element">
+                        <label for="fullname">Fullname: </label>
+                        <input type="text" name="fullname" id="fullname" />
+                    </div>
+
+                    <div class="form-element">
+                        <label for="department">Department: </label>
+                        <select name="department" id="department">
+                            <option value="Administration">Administration</option>
+                            <option value="Marketing">Marketing</option>
+                            <option value="Development">Development</option>
+                            <option value="Finance">Finance</option>
+                        </select>
+                    </div>
+
+                    <div class="form-element">
+                        <label for="Level">Level: </label>
+                        <select name="Level" id="Level">
+                            <option value="Junior">Junior</option>
+                            <option value="Mid-Senior">Mid-Senior</option>
+                            <option value="Senior">Senior</option>
+                        </select>
+                    </div>
+
+                    <div class="form-element">
+                        <label for="image-URL">Image-URL: </label>
+                        <input type="text" name="imageURL" id="imageURL" />
+                    </div>
+
+                    <button type="submit">Add</button>
+                </form>
+            </fieldset>
+        </section>
+
+        <section id="employeeInformation" class="employeeInformation">
+            <article id="administration-sec" class="employeeInformation">
+                <h2 class="listHeader">Employees work in the administration Department :</h2>
+            </article>
+
+            <article id="marketing-sec" class="employeeInformation">
+                <h2 class="listHeader">Employees work in the marketing Department :</h2>
+            </article>
+
+            <article id="development-sec" class="employeeInformation">
+                <h2 class="listHeader">Employees work in the development Department :</h2>
+            </article>
+
+            <article id="finance-sec" class="employeeInformation">
+                <h2 class="listHeader">Employees work in the finance Department :</h2>
+            </article>
         </section>
     </main>
 
@@ -59,4 +103,5 @@
 
     <script src="app.js"></script>
 </body>
+
 </html>
